# aicommit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: cli.rs  command.rs  diff.rs  mod.rs
src/client/: mod.rs  openai.rs  prompt.rs
src/utils/: config.rs  diff.rs  fs.rs  mod.rs  properties.rs
