[package]
name = "aicommit"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Daniil Buravlev burravlev.d.a@gmail.com"]

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = "1.0.226"
serde_json = "1.0.145"
clap = { version = "4.5.47", features = ["derive", "env"] }
