[package]
name = "aicommit"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Daniil Buravlev burravlev.d.a@gmail.com"]

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.47", features = ["derive", "env"] }
